--- a/packages/demo-next/package.json
+++ b/packages/demo-next/package.json
@@ -17,6 +17,7 @@
     "@tinacms/form-builder": "^0.34.0",
     "@tinacms/git-client": "^0.34.0",
     "@tinacms/styles": "^0.33.0",
+    "@tinacms/fields": "^0.33.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
